force-app/main/default/objects/Schedule_Type__c/Schedule_Type__c.object-meta.xml
<CustomObject>
    <description>Describes a subset of frequency on recurring Order Products. For example, if an Order Product has a frequency of weekly, Schedule Type may further refine this frequency to Every 7 Days - Monday.</description>
    <label>Schedule Type</label>
    <nameField>
        <label>Schedule Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Schedule Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>