force-app/main/default/objects/Schedule_Type__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <description>Used to determine the schedule of Service Plans in code.</description>
    <inlineHelpText>Used to determine the schedule of Service Plans in code. Value must be unique and follow a specified structure. Review schedule code documentation before entering new values.</inlineHelpText>
    <label>Code</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>