force-app/main/default/objects/Schedule_Type__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>User friendly description of what the Schedule Type code means. ie. W-1 = Every 7 Days - Monday.</description>
    <inlineHelpText>User friendly description of what the Schedule Type code means. ie. W-1 = Every 7 Days - Monday.</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>